install-usb-gui (0.2.28) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 21 Aug 2009 23:01:07 +0200

install-usb-gui (0.2.27) unstable; urgency=low

  * protect iso name against spaces in the pathname.
    start terminal with dbus-launch, otherwise call  of fll-iso2usb can fail 
    if install-usb-gui.bash is called in a root terminal.

 -- Joaquim Boura <x-un-i@sidux.com>  Fri, 21 Aug 2009 22:38:25 +0200

install-usb-gui (0.2.26) unstable; urgency=low

  * remove deprecated dh_desktop call.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 19 Jul 2009 14:39:07 +0200

install-usb-gui (0.2.25) unstable; urgency=low

  [ Bernard Gray ]
  * update art for 2009-02
  * convert all bitmaps to new svg art
  * update copyright for new art
  * vacuum defs for svg icons 

  [ Stefan Lippers-Hollmann ]
  * generate binary artwork.
  * bump compats level to 7, we already require dh7 anyways.
  * bump standards version to 3.8.2, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Jul 2009 23:23:54 +0200

install-usb-gui (0.2.24) unstable; urgency=low

  * fix desktop-entry-contains-encoding-key.
  * clarify licensing.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 20 Feb 2009 16:05:06 +0100

install-usb-gui (0.2.23) unstable; urgency=low

  * switch from dh_clean -k to dh_prep, to become compliant with debhelper 7
    and to make lintian happy.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 27 Jan 2009 17:27:25 +0100

install-usb-gui (0.2.22) unstable; urgency=low

  * el.po added

 -- Chris Hildebrandt <slam@sidux.com>  Thu, 18 Dec 2008 10:29:02 +0100

install-usb-gui (0.2.21) unstable; urgency=low

  * format combobox hidden, format info added instead

 -- Horst Tritremmel <hjt@sidux.com>  Wed, 17 Dec 2008 14:27:25 +0100

install-usb-gui (0.2.20) unstable; urgency=low

  * de.po fix
  * netbook user info (cheatcode vga=788) added 

 -- Horst Tritremmel <hjt@sidux.com>  Tue, 16 Dec 2008 08:51:31 +0100