@@ -1,4 +1,4 @@
-install-usb-gui.bash				usr/sbin/
+install-usb-gui.bash				usr/bin/
 install-usb-gui.desktop				usr/share/applications/sidux/
 src/*.png					usr/share/install-usb-gui/src/
 icons/hicolor/48x48/apps/install-usb-gui.png	usr/share/install-usb-gui/src/
