@@ -1,8 +1,14 @@
 install-usb-gui (0.2.28) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 21 Aug 2009 23:01:07 +0200
+  [ Joaquim Boura ]
+  * frontend does not need root to be called. This is done when calling
+    the backend, as that script goes to /usr/bin.
+    Changes done in previous commit were all discarded.
+
+ -- Joaquim Boura <x-un-i@sidux.com>  Sat, 22 Aug 2009 13:44:35 +0200
 
 install-usb-gui (0.2.27) unstable; urgency=low
 
